Bug 169279 - Bullet positioning and paragraph alignment changes after PPTX export
Summary: Bullet positioning and paragraph alignment changes after PPTX export
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, regression
Depends on:
Blocks: PPTX-Paragraph
  Show dependency treegraph
 
Reported: 2025-11-05 18:27 UTC by Balázs Varga
Modified: 2025-11-19 15:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file to save (13.75 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-11-05 18:31 UTC, Balázs Varga
Details
before / after LO saved (48.48 KB, image/png)
2025-11-05 18:33 UTC, Balázs Varga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Balázs Varga 2025-11-05 18:27:42 UTC
Description:
Bullet positioning and paragraph alignment changes after PPTX export

Steps to Reproduce:
1.Open the attached file
2.Save as *.pptx
3.Open the file in MS Power Point

Actual Results:
Text is centre aligned.

Expected Results:
Text is left aligned.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 25ffb536755f10e2dfd3da26ce4dacdab271a044
CPU threads: 8; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 Balázs Varga 2025-11-05 18:31:56 UTC
Created attachment 203756 [details]
Example file to save
Comment 2 Balázs Varga 2025-11-05 18:33:51 UTC
Created attachment 203757 [details]
before / after LO saved
Comment 3 Balázs Varga 2025-11-05 18:35:45 UTC
https://git.libreoffice.org/core/commit/ef32ba978d7be844440ee0d9c78ad37128b35512

author		Balazs Varga <balazs.varga@collabora.com>	Fri Aug 29 11:00:19 2025 +0200
committer	Balazs Varga <balazs.varga@collabora.com>	Tue Sep 02 08:19:45 2025 +0200

Related: tdf#111927 - PPTX: fix placeholder title text becomes small
Comment 4 Commit Notification 2025-11-08 16:28:58 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4eef7ef75ea4134561f0de45e59fa1fd2843cde

tdf#169279 sd: fix bad alignment after saving to pptx and opened in mso

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.