tdf#169279 sd: fix bad alignment after saving to pptx and opened in mso

issue come up after: ef32ba978d7be844440ee0d9c78ad37128b35512

Change-Id: I84169bf644e3269ad8f57dcd5877efd69ba5dacf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193466
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>